docs: 更新 CLAUDE.md 反映序列化器变更
- 移除运行命令中必需的 --add-opens 参数，改为可选建议
- 新增序列化组件说明（SerializerUtils、DefaultSplitSerializer、DefaultCheckpointSerializer）
- 更新 LocalFileSource 注释，反映 JDK 原生序列化的使用